# ProcTerra

./: CMakeLists.txt  CMakePresets.json  README.md
ProcTerra/: CMakeLists.txt  Core.cpp  Core.h  Planet.cpp  Planet.h  Source.cpp
bin_cpy/: plugins.cfg  resources.cfg
bin_cpy/Media/materials/scripts/: spaceSkybox.material
